--- a/404.md
+++ b/404.md
@@ -7,5 +7,5 @@ Error 404. Nothing found :( Where did you get that link?
 
 Please go to [homepage](/) or email me:
 
-    kejinlu@gmail.com
+    DashJim@gmail.com
 
