--- a/_posts/2014/2014-01-13-Set-up.md
+++ b/_posts/2014/2014-01-13-Set-up.md
@@ -2,10 +2,9 @@
 layout: post
 title: 要开工了
 categories:
-- Programming
+- Other
 tags:
-- Mac
-- iOS
+- Other
 ---
 
      
@@ -19,6 +18,5 @@ tags:
 如果你直接拷贝或Fork本Git库作为自己的博客，一定不要忘记删除我写的文章以及修改 `_includes / comments.md` 中的disqus_shortname，以及修改 `_layouts / default.html`中 google analytics的标识  `_gaq.push(['_setAccount', 'UA-12936429-2']);`。
 
 最后感谢您的配合。
-##NSTextView和Attribued String
 
 ----
