test which branch will be published

--- a/_posts/2014/2014-01-13-Set-up.md
+++ b/_posts/2014/2014-01-13-Set-up.md
@@ -7,8 +7,7 @@ tags:
 - Other
 ---
 
-     
-	 
+     test
 ##终于要开工了，想今后写点东西。
 估计会是七拉八扯的，简称[七扯](http://blog.sevenCHE.com)。本Blog建在Github上。使用Jekyll进行搭建，Jekyll是一个Ruby写的程序，可以将Markdown写的文章通过模板生成最终的Html静态文件。
 博客文章的评论功能使用了Disqus。
