wording change for last post

--- a/_posts/2014/2014-02-18-Git-学习路线图及中文资料推荐.md
+++ b/_posts/2014/2014-02-18-Git-学习路线图及中文资料推荐.md
@@ -16,7 +16,7 @@ tags:
 ![](/media/pic2014/0218-0.png)
 
 ## 引子
-一开始GIT给人感觉很简单，但一用起来又觉得每个地方都捉襟见肘。其实git的学习曲线要比想象中的更为陡峭，有近20个常用命令，每个命令又有20个左右常用的参数，相互组合使用。要学好的话学习量绝对不低于新学一门语言和其常用类库，因其大多数操作都有相近的实现方式，但结果又各不相同，所以蒋薪的《git权威指南》才写了595页。可是很多人并不喜欢大部头通读的方式，而更便爱边用边学。所幸git除官方文档外还有众多开源文档，其中比较著名的文档都有中文翻译。高质量的中文文档的阅读速度高效，这里就是我note里收集的一些相关网络书籍，以由易向难的顺序介绍。
+一开始GIT给人感觉很简单，但一用起来又觉得每个地方都捉襟见肘。其实git的学习曲线要比想象中的更为陡峭，有近20个常用命令，每个命令又有20个左右常用的参数，相互组合使用。要学好的话学习量绝对不低于新学一门语言和其常用类库，因其大多数操作都有相近的实现方式，但结果又各不相同，所以蒋薪的《git权威指南》才写了595页。可是很多人并不喜欢大部头通读的方式，而更便爱边用边学。所幸git除官方文档外还有众多开源文档，其中比较著名的文档都有中文翻译。高质量的中文文档的阅读更高效，这里就是我note里收集的一些相关网络书籍，以由易向难的顺序介绍。
 
 ---------------------
 
@@ -32,7 +32,7 @@ tags:
 ---------------------
 ## 初级到中级
 
-这个时候首先你要有一个练习用的GIT库，还得拿那个库干点事。那就在github.com注册个账号建一个练习库，然后在本地克隆两份，用来模拟两个程序员之间的同步和练习下面推荐教程中的命令。
+这个时候首先你要有一个练习用的GIT库，还得拿那个库干点事。推荐在github.com注册个账号建一个练习库，然后在本地克隆两份，用来模拟两个程序员之间的同步和练习下面推荐教程中的命令。
 
 
 ### [PRO GIT](http://git-scm.com/book/zh)
