wording change for last post

--- a/_posts/2014/2014-02-18-Git-学习路线图及中文资料推荐.md
+++ b/_posts/2014/2014-02-18-Git-学习路线图及中文资料推荐.md
@@ -36,11 +36,11 @@ tags:
 
 
 ### [PRO GIT](http://git-scm.com/book/zh)
-本书具有一定的官方性质，是正式出版物的免费版，学习Git的屠龙刀。本文深入浅出，长度适中，讲解精练到位，结构合理，通读此书是提升功力的捷径。
+本书具有一定的官方性质，是正式出版物的免费版，学习Git的屠龙刀。其深入浅出，长度适中，讲解精练到位，结构合理，通读此书是提升功力的捷径。
 
  
 ### [图解Git](http://marklodato.github.io/visual-git-guide/index-zh-cn.html)
-真是一图胜千言，在众多文档中此文可以算是出奇制胜，其它文档中较难理解的东西到了这里迎刃而解，称之为倚天剑毫不过分。倚天配屠龙 - 在读Pro Git时配套用。
+真是一图胜千言，在众多文档中此文可以算是出奇制胜，其它文档中较难理解的东西到了这里迎刃而解，称之为倚天剑毫不过分。倚天配屠龙 - 可在读Pro Git时配套用。
 
 ### [Git Magic](http://www-cs-students.stanford.edu/~blynn/gitmagic/intl/zh_cn/ch02.html)
 斯坦福血统，内容覆盖广，但解释偏少，可在读完Pro Git之后用来开拓思路。
@@ -66,7 +66,7 @@ tags:
 为了本文的完整性加进来的英文页面，好在这不是教材，无伤大雅。 
 
 ### [Git Cookbook](http://blog.sevenche.com/2014/02/Git-cook-book/)   
-这是本人的作品哈，里面是一些有用的小技巧。比如说你一上手拿到一个3G的库，众多的分支，怎么开始工作？
+这是本人的作品哈，里面是一些有用的小技巧。比如说你一上手拿到一个3G大小的库，众多的分支，怎么开始工作？
 
 ---------------------
 
