wording change for last post

--- a/_posts/2014/2014-02-18-Git-学习路线图及中文资料推荐.md
+++ b/_posts/2014/2014-02-18-Git-学习路线图及中文资料推荐.md
@@ -10,7 +10,7 @@ tags:
 
 > 人生若只如初见，所有往事都化为江南的一场烟雨，在相视一笑中，随风荡漾起回忆的波纹，然后再渐渐隐去在画中的江南，只因为你的离去，我竟为你留下的惊艳 ...    
 
-本文针对那些对GIT有初见感觉的攻城狮们。
+本文针对那些对GIT有**初见**感觉的攻城狮们。
 
 ---------------------
 ![](/media/pic2014/0218-0.png)
