wording change for last post

--- a/_posts/2014/2014-02-18-Git-学习路线图及中文资料推荐.md
+++ b/_posts/2014/2014-02-18-Git-学习路线图及中文资料推荐.md
@@ -48,6 +48,11 @@ tags:
 ### [Git Community Book 中文版](http://gitbook.liuhui998.com/index.html)
 因为程度上本书和Pro Git冲突，本人没有读过此书，但仅看其完整的体系结构和中文翻译是值得推荐的。
  
+### GitHub相关
+相信不少人都有在Github上建blog的冲动，下面是一些对Github不错的介绍。  
+[如何高效利用GitHub](http://www.yangzhiping.com/tech/github.html)    
+[蒋薪-GitHub](http://www.worldhello.net/gotgithub/)  
+上文的作者'蒋薪'正是那本595页《git权威指南》的作者。
 
 ### 其它
 [Git 教學](http://blog.gogojimmy.net/2012/01/17/how-to-use-git-1-git-basic/)   
@@ -57,10 +62,6 @@ tags:
 排版不是很好，但GIT中比较关键的地方讲的不错，开扩视野用吧。
 
 [git详解](http://blackanger.blog.51cto.com/140924/123399)
-
-### GitHub相关
-[如何高效利用GitHub](http://www.yangzhiping.com/tech/github.html)    
-[蒋薪-GitHub](http://www.worldhello.net/gotgithub/)
 
 ### [Git GUI Clients](http://git-scm.com/downloads/guis)
 为了本文的完整性加进来的英文页面，好在这不是教材，无伤大雅。 
