wording change for last post

--- a/_posts/2014/2014-02-18-Git-学习路线图及中文资料推荐.md
+++ b/_posts/2014/2014-02-18-Git-学习路线图及中文资料推荐.md
@@ -34,11 +34,9 @@ tags:
 
 这个时候首先你要有一个练习用的GIT库，还得拿那个库干点事。推荐在github.com注册个账号建一个练习库，然后在本地克隆两份，用来模拟两个程序员之间的同步和练习下面推荐教程中的命令。
 
-
 ### [PRO GIT](http://git-scm.com/book/zh)
 本书具有一定的官方性质，是正式出版物的免费版，学习Git的屠龙刀。其深入浅出，长度适中，讲解精练到位，结构合理，通读此书是提升功力的捷径。
 
- 
 ### [图解Git](http://marklodato.github.io/visual-git-guide/index-zh-cn.html)
 真是一图胜千言，在众多文档中此文可以算是出奇制胜，其它文档中较难理解的东西到了这里迎刃而解，称之为倚天剑毫不过分。倚天配屠龙 - 可在读Pro Git时配套用。
 
@@ -47,9 +45,12 @@ tags:
 
 ### [Git Community Book 中文版](http://gitbook.liuhui998.com/index.html)
 因为程度上本书和Pro Git冲突，本人没有读过此书，但仅看其完整的体系结构和中文翻译是值得推荐的。
- 
+
+### [Git分支管理策略](http://www.ruanyifeng.com/blog/2012/07/git.html)  
+如题
+
 ### GitHub相关
-相信不少人都有在Github上建blog的冲动，下面是一些对Github不错的介绍。  
+相信不少人在学习GIT的过程中都有在Github上建blog的冲动，下面是一些对Github不错的介绍。搭建Blog本身也是一个GIT学习和使用的过程。  
 [如何高效利用GitHub](http://www.yangzhiping.com/tech/github.html)    
 [蒋薪-GitHub](http://www.worldhello.net/gotgithub/)  
 上文的作者'蒋薪'正是那本595页《git权威指南》的作者。
@@ -61,8 +62,6 @@ tags:
 [Git中级用法](http://blackanger.blog.51cto.com/140924/123399)   
 排版不是很好，但GIT中比较关键的地方讲的不错，开扩视野用吧。
 
-[git详解](http://blackanger.blog.51cto.com/140924/123399)
-
 ### [Git GUI Clients](http://git-scm.com/downloads/guis)
 为了本文的完整性加进来的英文页面，好在这不是教材，无伤大雅。 
 
@@ -72,5 +71,7 @@ tags:
 ---------------------
 
 ## 高级阶段
-这个时候的老师就一个～谷哥。
+看书是到不了这个阶段的，只有靠自己修行了。这个时候的老师就一个～谷哥。
+
+> 题外的一点感悟，众多的提交历史和方便的Diff功能使得GIT库成为一个学习的宝库。比如作者一上来拿到一个3G的库，几乎没有文档，先自己跟据分支的历史找到常用的分支。想知道一个功能怎么实现的就grep提交历史，找到相关提交后再diff一下就什么都清楚了，比在IDE里查的还快。
 
