added a favicon.ico and added two new blogs

--- a/_posts/2014/2014-02-18-Git-学习路线图及中文资料推荐.md
+++ b/_posts/2014/2014-02-18-Git-学习路线图及中文资料推荐.md
@@ -38,16 +38,16 @@ tags:
 本书具有一定的官方性质，是正式出版物的免费版，学习Git的屠龙刀。其深入浅出，长度适中，讲解精练到位，结构合理，通读此书是提升功力的捷径。
 
 ### [图解Git](http://marklodato.github.io/visual-git-guide/index-zh-cn.html)
-真是一图胜千言，在众多文档中此文可以算是出奇制胜，其它文档中较难理解的东西到了这里迎刃而解，称之为倚天剑毫不过分。倚天配屠龙 - 可在读Pro Git时配套用。
+真是一图胜千言，在众多文档中此文可以算是出奇制胜，其它文档中较难理解的东西到了这里迎刃而解，称之为倚天剑毫不过分。倚天配屠龙 - 可在读'Pro Git'时配套用。
 
 ### [Git Magic](http://www-cs-students.stanford.edu/~blynn/gitmagic/intl/zh_cn/ch02.html)
-斯坦福血统，内容覆盖广，但解释偏少，可在读完Pro Git之后用来开拓思路。
+斯坦福血统，内容覆盖广，但解释偏少，可在读完'Pro Git'之后用来开拓思路。
 
 ### [Git Community Book 中文版](http://gitbook.liuhui998.com/index.html)
-因为程度上本书和Pro Git冲突，本人没有读过此书，但仅看其完整的体系结构和中文翻译是值得推荐的。
+因为程度上本书和'Pro Git'冲突，本人没有读过此书，但仅看其完整的体系结构和中文翻译是值得推荐的。
 
 ### [Git分支管理策略](http://www.ruanyifeng.com/blog/2012/07/git.html)  
-如题
+了解branch指令是一回事，怎么管理这些branch又是另一回事。'Pro Git'有分支管理的章节，不过没有这里说的详细。
 
 ### GitHub相关
 相信不少人在学习GIT的过程中都有在Github上建blog的冲动，下面是一些对Github不错的介绍。搭建Blog本身也是一个GIT学习和使用的过程。  
